@@ -3,6 +3,7 @@
 
 2007 (most recent donators first):
 
+* Ivo-Jose Jimenez-Ramos
 * Robert Heckel
 * Ramana Kumar
 * Thomas Svensen
