@@ -150,6 +150,9 @@ the terms of any one of the MPL, the GPL or the LGPL.
     color: green;
     text-decoration: none;
 }
+.hl-URL:hover {
+    background-color: gray;
+}
 
 /* MOW */
 
